--- a/Sidebar.html
+++ b/Sidebar.html
@@ -11,7 +11,7 @@
          var dataFinal =  document.getElementById("dataFinal").value;
          var IDs = document.getElementById("idEmpresas").value;
          
-         var baseUrl = "https://api.zeeng.com.br/indicadores/stats?chave=6ba108b1097b48238d414b9296cb05a3";
+         var baseUrl = "https://api.zeeng.com.br/indicadores/stats?chave=APIkey";
          var IdArray = IDs.split(",");
   
          var empresas = IdArray.map(function(id){
